Manifold project-wide changes: - Refined project readme.md files, standardized them, and overall shifted documentation focus more toward Manifold’s individual projects and away from the current monolithic docs - All manifold projects are defined as "automatic" modules now, with explicit names via "Automatic-Module-Name" - DEPRECATED: -Xplugin:Manifold arguments: 'strings' and 'exceptions' -- replaced with dependencies: manifold-strings and manifold.exceptions -- manifold.api.templ -> manifold.strings.api - API changes -- clash: manifold v. manifold.util: manifold.util -> manifold.api.util -- class: manifold.ext  ''                         -> manifold.ext.api - Removed bootstrap plugin, no longer necessary - Manifold JavacPlugin is now a self registered Plugin service